app/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - "*"
  gateways:
    - backend
  http:
    - match:
        - uri:
            prefix: /getServices
        - uri:
            prefix: /getOperations
        - uri:
            prefix: /getTags
        - uri:
            prefix: /getCausalRelations
        - uri:
            prefix: /updateTags
      route:
        - destination:
            host: backend
            port:
              number: 80
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: v1
---
